// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ios should render a FadeIn animation wrapper component 1`] = `
<View
  style={
    Object {
      "opacity": 0,
    }
  }
>
  <Text>
    Hello World
  </Text>
</View>
`;

exports[`ios should render a FadeIn animation wrapper component 2`] = `
<View
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <Text>
    Hello World
  </Text>
</View>
`;
